@@ -8,6 +8,7 @@ import hcmute.fit.event_management.repository.UserRepository;
 import hcmute.fit.event_management.repository.PasswordResetTokenRepository;
 import hcmute.fit.event_management.service.AuthService;
 import hcmute.fit.event_management.util.JwtTokenUtil;
+import jakarta.mail.MessagingException;
 import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,16 +19,19 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import payload.Response;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
-@Component
+@Service
 public class AuthServiceImpl implements AuthService {
 
     @Autowired
@@ -45,25 +49,45 @@ public class AuthServiceImpl implements AuthService {
     Logger logger = LoggerFactory.getLogger(this.getClass());
     @Override
     public ResponseEntity<Response> signIn(UserDTO account) {
-        Response response;
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(account.getEmail(), account.getPassword()));
-        if (authentication.isAuthenticated()) {
+        try {
+            Optional<User> userOpt = userRepository.findByEmail(account.getEmail());
+            if (userOpt.isEmpty()) {
+                logger.warn("Login failed: Email {} not found", account.getEmail());
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                        .body(new Response(401, "Unauthorized", "Email hoặc mật khẩu không hợp lệ"));
+            }
+
+            User user = userOpt.get();
+            // Kiểm tra trạng thái is_active
+            if (!user.isActive()) {
+                logger.warn("Login failed: Account {} is locked", account.getEmail());
+                return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                        .body(new Response(403, "Forbidden", "Tài khoản của bạn đã bị khóa. Vui lòng liên hệ quản trị viên."));
+            }
+
+            Authentication authentication = authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(account.getEmail(), account.getPassword()));
             SecurityContextHolder.getContext().setAuthentication(authentication);
+
             List<String> roles = authentication.getAuthorities().stream()
                     .map(GrantedAuthority::getAuthority)
-                    .toList();
+                    .filter(auth -> auth.startsWith("ROLE_"))
+                    .map(auth -> auth.substring(5))
+                    .collect(Collectors.toList());
+
             String token = jwtTokenUtil.generateToken(authentication, roles);
-            response = new Response(200, "Success", token);
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } else {
-            response = new Response(401, "Unauthorized", "Invalid credentials");
-            return new ResponseEntity<>(response, HttpStatus.UNAUTHORIZED);
+
+            logger.info("User {} logged in successfully", account.getEmail());
+            return ResponseEntity.ok(new Response(200, "Success", token));
+        } catch (AuthenticationException e) {
+            logger.error("Login failed for email {}: {}", account.getEmail(), e.getMessage());
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(new Response(401, "Unauthorized", "Email hoặc mật khẩu không hợp lệ"));
         }
     }
     @Transactional
     @Override
-    public ResponseEntity<Response> sendResetPassword(String email) {
+    public ResponseEntity<Response> sendResetPassword(String email) throws MessagingException {
         // Tìm tài khoản theo email
         Optional<User> accountOpt = userRepository.findByEmail(email);
         if (accountOpt.isEmpty()) {
@@ -72,7 +96,7 @@ public class AuthServiceImpl implements AuthService {
                     .body(new Response(404, "Not Found", "Account with this email does not exist"));
         }
 
-        User user = accountOpt.get(); // Tài khoản tồn tại
+        User user = accountOpt.get();
         String newToken = jwtTokenUtil.generateResetToken(email);
 
         // Kiểm tra và cập nhật/đặt mới token
@@ -80,7 +104,7 @@ public class AuthServiceImpl implements AuthService {
                 .findByUserId(user.getUserId())
                 .orElse(new PasswordResetToken());
 
-        resetToken.setUserId(user.getUserId());
+        resetToken.setUser(user);
         resetToken.setToken(newToken);
         passwordResetTokenRepository.save(resetToken);
 
@@ -88,7 +112,6 @@ public class AuthServiceImpl implements AuthService {
         emailService.sendResetEmail(email, newToken);
         logger.info("Password reset request email sent successfully for email: {}", email);
 
-        // Trả về phản hồi
         return ResponseEntity.ok(new Response(200, "Success", "Password reset link has been sent to your email"));
     }
 
@@ -122,4 +145,10 @@ public class AuthServiceImpl implements AuthService {
         }
     }
 
+    @Override
+    public ResponseEntity<Response> logout() {
+        SecurityContextHolder.clearContext();
+        logger.info("User logged out successfully");
+        return ResponseEntity.ok(new Response(200, "Success", "Logged out successfully"));
+    }
 }
